Increase minimum width of download column to avoid wrapping

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -118,7 +118,7 @@ ul.pagination {
 }
 
 .column-download {
-  min-width: 343px;
+  min-width: 344px;
 }
 
 .column-download .btn {
